--- a/test.ipynb
+++ b/test.ipynb
@@ -6,7 +6,7 @@
       "name": "test.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPuXWQ/BxBLg0+lQbYXF/oU",
+      "authorship_tag": "ABX9TyNe30+UKpfe6cJqPlDUK4dD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,10 +51,203 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "import numpy as np"
       ],
       "metadata": {
         "id": "vOjg0JNg-OzD"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.spacing(1e9)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q04xauiSJwUq",
+        "outputId": "4c040083-f5a1-44b7-cac7-52e9165f6e8f"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.1920928955078125e-07"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1e9 == (1e9 + np.spacing(1e9)/3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0zlrWc-hJzrs",
+        "outputId": "b2177bf9-02f7-4430-d98e-4c54d25a6773"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1e9 == (1e9 + (np.spacing(1e9))/3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZhFSVVR6J9Eb",
+        "outputId": "33e7a68f-0e9c-4d5b-f614-199972f5eedd"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1e9 == (1e9 + (np.spacing(1e9))/2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4zhKQSwgJ-8z",
+        "outputId": "67440ab4-b13e-4046-aa58-1fd0b3c5cd60"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1e9 == (1e9 + (np.spacing(1e9))/1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sp9oV_DEKCyZ",
+        "outputId": "2413c721-96ac-4bc7-c651-75ceeaf2dd29"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1e9 == (1e9 + (np.spacing(1e9))/1.9)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TQn41EDPKEDX",
+        "outputId": "bb95f8ea-4c6c-47bb-c319-37e8600cec15"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1e9 == (1e9 + (np.spacing(1e9))/2.1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ldI-lbe7KLo5",
+        "outputId": "243e4160-8089-49ec-f94f-75de8741da84"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "BfkPlzbtKOe2"
       },
       "execution_count": null,
       "outputs": []
