--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM7HUu3SYDjpEnhh3dFxikn",
+      "authorship_tag": "ABX9TyMEC57H8ezV5y0xomn14bai",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -281,6 +281,254 @@
       ],
       "metadata": {
         "id": "Vb1S2F1_AXpz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Problem 3***"
+      ],
+      "metadata": {
+        "id": "SB9J5CAlBcYS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "d = my_bin_2_dec(my_dec_2_bin(12654))\n",
+        "d"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4Pd8nDo0BfWU",
+        "outputId": "87c30787-dc6c-4667-89d6-87bd5cb75201"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12654"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Yes, this is the same number."
+      ],
+      "metadata": {
+        "id": "C9E5-RmQBzK9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "zxLn83HBBrD6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Problem 4***"
+      ],
+      "metadata": {
+        "id": "Ivh32ELBCgol"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def my_bin_adder(b1, b2):\n",
+        "  b = [] # Create an empty list, b\n",
+        "  \n",
+        "  length = max(len(b1), len(b2)) # Set the length to the maximum of the two lengths of the two lists\n",
+        "\n",
+        "  b2 = ((length - len(b2))*[0]) + b2\n",
+        "  b1 = ((length - len(b1))*[0]) + b1\n",
+        "\n",
+        "  # ^-- Make the two lists the same length by adding zeros at the beginning\n",
+        "\n",
+        "  extra = 0\n",
+        "\n",
+        "  for i in range(length-1, -1, -1):\n",
+        "    sum = b2[i] + b1[i] + extra\n",
+        "    digit = 0 if sum % 2 == 0 else 1 # Create a binary digit of either zero or one\n",
+        "\n",
+        "    b.append(digit) # Add this digit to list b\n",
+        "    extra = 1 if sum >= 2 else 0 # Assign the extra digit as 1 if the sum was indeed greater than or equal to 2\n",
+        "\n",
+        "  if extra == 1:\n",
+        "    b.append(1) # Add the extra digit to the beginning of list b\n",
+        "\n",
+        "  # Now we have the correct list but in the incorrect order, so reverse it\n",
+        "  b.reverse()\n",
+        "  return b\n",
+        "\n",
+        "\n",
+        "  \n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "8Oo853xjCm9Z"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_bin_adder([1, 1, 1, 1, 1], [1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "O0ME23PgTbwC",
+        "outputId": "85c11ce7-23e2-4d69-ae3c-d02412e19f6c"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 0, 0, 0, 0, 0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_bin_adder([1, 1, 1, 1, 1], [1, 0, 1, 0, 1, 0, 0])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IMK6s5ooTscr",
+        "outputId": "87a6b843-e7e4-4e88-bbdb-3f573061d6ed"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 1, 1, 0, 0, 1, 1]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_bin_adder([1, 1, 0], [1, 0, 1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5lBzSJSNT_cp",
+        "outputId": "68820b01-e73f-4aa6-b892-2d83388ea1c7"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 0, 1, 1]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "SQrqWrI1UEL7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Problem 5***"
+      ],
+      "metadata": {
+        "id": "MlQp8p4qUHeK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If more bits are allocated to the fraction, there will be more precision but the range of values will decrease since less bits will be available for the exponent and the characteristic part of the IEEE754 number will have a smaller maximum and a larger minimum.\n",
+        "\n",
+        "If more bits are allocated to the exponent, the characteristic part of the IEEE754 number will be able to take on a larger range of values making the IEEE754 number able to take on a larger range of values, but with less precision as the fraction part of the IEEE754 number will then have less bits allocated to it.\n",
+        "\n",
+        "\n",
+        "\n",
+        "Only one bit is needed for the sign since there are only two options available: positive or negative. Allocating more bits to the sign would be a waste of bits and serve no purpose."
+      ],
+      "metadata": {
+        "id": "BZkTcPj9Vmz5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "eqIZx3z0UQAc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Problem 6***"
+      ],
+      "metadata": {
+        "id": "T6qJakCvYBC8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "UGLG3P2AYEB4"
       },
       "execution_count": null,
       "outputs": []
