--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -6,7 +6,7 @@
       "name": "HW2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMAs3SgE0fYAyEIwKRfeQFQ",
+      "authorship_tag": "ABX9TyMMxTe6LT6dMsSzcv6QbY+g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -423,6 +423,39 @@
       ],
       "metadata": {
         "id": "SS4epNFh2ZXd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Problem 4***"
+      ],
+      "metadata": {
+        "id": "JTFFBWjC3wDW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "If there are too many data points, then the Cubic Spline would involve a lot of equations and be very tedious so the Nearest Neighbor would be a good alternative.\n",
+        "\n",
+        "Also, situations that would require higher degree polynomials (quadratic and above) such as when there are a large number of curves in the graph would then require the calculation of higher order derivatives which makes the calculations more complicated and then potentially require more memory and faster processor speed.\n",
+        "\n",
+        "Nearest Neighbor is much quicker and less complicated, so in the above examples it is superior to cubic spline interpolation."
+      ],
+      "metadata": {
+        "id": "ZHGef0aD72xH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "bZFbDM5s3ykv"
       },
       "execution_count": null,
       "outputs": []
