--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -6,7 +6,7 @@
       "name": "HW2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMMxTe6LT6dMsSzcv6QbY+g",
+      "authorship_tag": "ABX9TyNkrF7aGtbHbPYwwpd7x5oT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
         "      break\n",
         "    if x[j] < y and y < x[j + 1]:\n",
         "      print(\"The number is in range of {} and {}, so it is between index {} and {}\".format(x[j], x[j + 1], j, j + 1))\n",
-        "      print(\"These are the x1 and x2 values, so we pick up corresponding y1 and y2 values from list y\")\n",
+        "      print(\"These are the x1 and x2 values, so we pick the corresponding y1 and y2 values from list y\")\n",
         "      print(y1[j])\n",
         "      print(y1[j + 1])\n",
         "      intervals = zip(x_arr, x_arr[1:], y_arr, y_arr[1:])\n",
@@ -100,9 +100,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vqJ6GNZHYlDh",
-        "outputId": "0968f79a-237d-49ed-bbd6-a5b828606866"
+        "outputId": "e35bc432-67d1-4b97-8dae-ff79ab19b2be"
       },
-      "execution_count": 55,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
             "[2.5]\n",
             "The number is not in range of 1 and 2.5\n",
             "The number is in range of 2.5 and 3.4, so it is between index 1 and 2\n",
-            "These are the x1 and x2 values, so we pick up corresponding y1 and y2 values from list y\n",
+            "These are the x1 and x2 values, so we pick the corresponding y1 and y2 values from list y\n",
             "4\n",
             "5.8\n",
             "(1, 2.5, 2, 4)\n",
@@ -146,9 +146,9 @@
           "height": 538
         },
         "id": "ZtAVLCBAa-xl",
-        "outputId": "281ce1bd-7a3a-4621-f1ea-203193f71aa6"
+        "outputId": "46de014f-ed46-4aee-9ca6-eb212a17e5c9"
       },
-      "execution_count": 56,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "display_data",
@@ -228,7 +228,7 @@
         "id": "-Jf_bl7uiPWx",
         "outputId": "89bd6a5b-e00a-43f2-d025-c22cfbbffa69"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -284,7 +284,7 @@
         "id": "Rms0s4B1miAW",
         "outputId": "9f4232f5-2f69-4a0d-df91-712e9e049b62"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -375,7 +375,7 @@
         "id": "e6eBffkds8Ev",
         "outputId": "bffc93b2-365b-4e47-eff7-4cbfec51fbfc"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
