--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -6,7 +6,7 @@
       "name": "HW2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNkrF7aGtbHbPYwwpd7x5oT",
+      "authorship_tag": "ABX9TyOR9/gjswbfvsaNSl2kwHTt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,7 +102,7 @@
         "id": "vqJ6GNZHYlDh",
         "outputId": "e35bc432-67d1-4b97-8dae-ff79ab19b2be"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +148,7 @@
         "id": "ZtAVLCBAa-xl",
         "outputId": "46de014f-ed46-4aee-9ca6-eb212a17e5c9"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -337,7 +337,9 @@
         "  print(\"ylist - y0 =\", (y_list - y0))\n",
         "  print(\"y_list:\", y_list, \"\\nyi:\", yi)\n",
         "\n",
-        "  return data[xi, yi]\n",
+        "  result = xi, yi\n",
+        "\n",
+        "  return result\n",
         "\n",
         "x_list = np.array([2.14, 3.25, 4.36, 5.47, 6.58])\n",
         "y_list = np.array([3.65, 5.86, 7.47, 5.99, 6.8])\n",
@@ -345,11 +347,11 @@
         "\n",
         "print(data)\n",
         "\n",
-        "dat1 = my_nearest_neighbour(4.1, 5.9, x_list)\n",
-        "print(\"First data at (4.1, 5.9):\", dat1)\n",
+        "data1 = my_nearest_neighbour(4.1, 5.9, x_list)\n",
+        "print(\"First data at (4.1, 5.9):\", data1)\n",
         "\n",
-        "dat2 = my_nearest_neighbour(6.7, 4.1, x_list)\n",
-        "print(\"Second data at (6.7, 4.1):\", dat2)\n",
+        "data2 = my_nearest_neighbour(6.7, 4.1, x_list)\n",
+        "print(\"Second data at (6.7, 4.1):\", data2)\n",
         "\n",
         "plt.plot(x_list, y_list, \"ro\")\n",
         "plt.plot(x_list, y_list, \"b\")\n",
@@ -373,9 +375,9 @@
           "height": 906
         },
         "id": "e6eBffkds8Ev",
-        "outputId": "bffc93b2-365b-4e47-eff7-4cbfec51fbfc"
+        "outputId": "3e97709c-a8e3-42db-a846-d3980555804d"
       },
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -392,14 +394,14 @@
             "ylist - y0 = [-2.25 -0.04  1.57  0.09  0.9 ]\n",
             "y_list: [3.65 5.86 7.47 5.99 6.8 ] \n",
             "yi: 1\n",
-            "First data at (4.1, 5.9): 1\n",
+            "First data at (4.1, 5.9): (2, 1)\n",
             "xlist - x0 = [-4.56 -3.45 -2.34 -1.23 -0.12]\n",
             "x_list: [2.14 3.25 4.36 5.47 6.58] \n",
             "xi: 4\n",
             "ylist - y0 = [-0.45  1.76  3.37  1.89  2.7 ]\n",
             "y_list: [3.65 5.86 7.47 5.99 6.8 ] \n",
             "yi: 0\n",
-            "Second data at (6.7, 4.1): 1\n"
+            "Second data at (6.7, 4.1): (4, 0)\n"
           ]
         },
         {
