--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -6,7 +6,7 @@
       "name": "HW4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPtVJJBYR51sMERqVYYxKhw",
+      "authorship_tag": "ABX9TyPxXLlLZ6xmXvMlCQHzZbW0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "ZJYJkcEBac5I"
       },
@@ -85,9 +85,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wAfPNHdQamt7",
-        "outputId": "71fe0635-75ea-478d-efa4-07646009a9f1"
+        "outputId": "2c45710c-9b4a-49b9-e865-be269906f295"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +106,7 @@
       "metadata": {
         "id": "F1NEcb_bfOlJ"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -168,9 +168,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f5cd1645-c420-465b-c708-9382dfee2b80"
+        "outputId": "14716fc1-5a97-41c5-8b8b-f12c947206b1"
       },
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,7 +189,7 @@
       "metadata": {
         "id": "cWbT9Xpws48O"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -218,7 +218,102 @@
       "metadata": {
         "id": "r8VMgqro9uaF"
       },
-      "execution_count": null,
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Problem 4***"
+      ],
+      "metadata": {
+        "id": "II4cnutODFJ0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def my_bisection(f, a, b, tol):\n",
+        "\n",
+        "  x = a\n",
+        "  y = b\n",
+        "\n",
+        "  m = np.ceil(np.log2((y - x)/tol))\n",
+        "  \n",
+        "  E = np.zeros(int(m))\n",
+        "\n",
+        "  R = np.zeros(int(m))\n",
+        "\n",
+        "  lim = m;\n",
+        "\n",
+        "  j = 0\n",
+        "\n",
+        "  def sign_func(x):\n",
+        "    if (0 == x):\n",
+        "      return x\n",
+        "    return x/abs(x)\n",
+        "\n",
+        "  while(j < lim):\n",
+        "    R[j] = (x + y)/2\n",
+        "    E[j] = abs(f(R[j]))\n",
+        "    if (E[j] < tol):\n",
+        "      E[np.isnan(R)] = []\n",
+        "      R[np.isnan(R)] = []\n",
+        "      \n",
+        "    elif (sign_func(f(x)) == sign_func(f(R[j]))):\n",
+        "      x = R[j]\n",
+        "\n",
+        "    else:\n",
+        "      y = R[j]\n",
+        "    \n",
+        "    j += 1\n",
+        "\n",
+        "  return [R, E]\n",
+        "\n",
+        "# Then use the function to run the test cases\n",
+        "\n",
+        "f = lambda x: x**2 - 2\n",
+        "[R, E] = my_bisection(f, 0, 2, 1e-1)\n",
+        "\n",
+        "print([R, E])\n",
+        "\n",
+        "f = lambda x: np.sin(x) - np.cos(x)\n",
+        "[R, E] = my_bisection(f, 0, 2, 1e-2)\n",
+        "\n",
+        "print([R, E])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x-S_Aj_5DHu7",
+        "outputId": "b503fd3e-35d0-47dd-a739-f54b788e8a78"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[array([1.    , 1.5   , 1.25  , 1.375 , 1.4375]), array([1.        , 0.25      , 0.4375    , 0.109375  , 0.06640625])]\n",
+            "[array([1.     , 0.5    , 0.75   , 0.875  , 0.8125 , 0.78125, 0.78125,\n",
+            "       0.78125]), array([0.30116868, 0.39815702, 0.05005011, 0.12654664, 0.03832309,\n",
+            "       0.00586637, 0.00586637, 0.00586637])]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "_Wby7xJILevm"
+      },
+      "execution_count": 9,
       "outputs": []
     }
   ]
