--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -6,7 +6,7 @@
       "name": "HW4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPxXLlLZ6xmXvMlCQHzZbW0",
+      "authorship_tag": "ABX9TyPDtVbIbBgBQy8OfRClomHZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 19,
       "metadata": {
         "id": "ZJYJkcEBac5I"
       },
@@ -85,9 +85,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wAfPNHdQamt7",
-        "outputId": "2c45710c-9b4a-49b9-e865-be269906f295"
+        "outputId": "34d313f2-4dc3-41a1-a176-7db14c667dc0"
       },
-      "execution_count": 7,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +106,7 @@
       "metadata": {
         "id": "F1NEcb_bfOlJ"
       },
-      "execution_count": 7,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -168,9 +168,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "14716fc1-5a97-41c5-8b8b-f12c947206b1"
+        "outputId": "ec7e759f-2e5d-4a6e-8e9f-9b20166d70a2"
       },
-      "execution_count": 8,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,7 +189,7 @@
       "metadata": {
         "id": "cWbT9Xpws48O"
       },
-      "execution_count": 8,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -218,7 +218,7 @@
       "metadata": {
         "id": "r8VMgqro9uaF"
       },
-      "execution_count": 8,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -289,9 +289,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x-S_Aj_5DHu7",
-        "outputId": "b503fd3e-35d0-47dd-a739-f54b788e8a78"
+        "outputId": "d37d1639-3459-4059-cd5e-4aead8630d0e"
       },
-      "execution_count": 9,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +313,90 @@
       "metadata": {
         "id": "_Wby7xJILevm"
       },
-      "execution_count": 9,
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Problem 5***"
+      ],
+      "metadata": {
+        "id": "RIlEpUQfPBXM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def my_newton(f, df, x0, tol):\n",
+        "  E = []\n",
+        "  R = []\n",
+        "  # First, append the value of x0 to R\n",
+        "  R.append(x0)\n",
+        "  # Then, take the absolute value fo the tailing term of R and append it to E\n",
+        "  E.append(abs(f(R[-1])))\n",
+        "  # Then, the while loop should have a limit of some kind\n",
+        "  lim = 10000\n",
+        "\n",
+        "  j = 0\n",
+        "\n",
+        "  while j < lim:\n",
+        "    R.append(x0 - (f(x0)/df(x0)))\n",
+        "    E.append(abs(f(R[-1])))\n",
+        "    # If the final value of R isn't within the tolerence define, then update the value of x0\n",
+        "    x0 = R[-1]\n",
+        "    j += 1\n",
+        "    # If the final value of E is within the tolerance defined...\n",
+        "    if E[-1] < tol:\n",
+        "      return [R, E]\n",
+        "  return [R, E]\n",
+        "\n",
+        "\n",
+        "# Then run the test cases\n",
+        "\n",
+        "f = lambda x: x**2 - 2\n",
+        "df = lambda x: 2*x\n",
+        "[R, E] = my_newton(f, df, 1, 1e-5)\n",
+        "\n",
+        "print([R, E])\n",
+        "\n",
+        "    \n",
+        "f = lambda x: np.sin(x) - np.cos(x)\n",
+        "df = lambda x: np.cos(x) + np.sin(x)\n",
+        "[R, E] = my_newton(f, df, 1, 1e-5)\n",
+        "\n",
+        "print([R, E])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZRQmm-zSPGkS",
+        "outputId": "d6874617-7be1-4f24-a29f-edef5791377f"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1, 1.5, 1.4166666666666667, 1.4142156862745099], [1, 0.25, 0.006944444444444642, 6.007304882871267e-06]]\n",
+            "[[1, 0.782041901539138, 0.7853981759997019], [0.30116867893975674, 0.004746462127804163, 1.7822277875723103e-08]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Kmb1HoQTR5Br"
+      },
+      "execution_count": 23,
       "outputs": []
     }
   ]
