--- a/HW4.ipynb
+++ b/HW4.ipynb
@@ -6,7 +6,7 @@
       "name": "HW4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPDtVbIbBgBQy8OfRClomHZ",
+      "authorship_tag": "ABX9TyNn75KsTyxYpIYe4E+das7r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 31,
       "metadata": {
         "id": "ZJYJkcEBac5I"
       },
@@ -85,9 +85,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wAfPNHdQamt7",
-        "outputId": "34d313f2-4dc3-41a1-a176-7db14c667dc0"
+        "outputId": "4128f855-6318-42f8-c670-8b5f2394eea6"
       },
-      "execution_count": 20,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +106,7 @@
       "metadata": {
         "id": "F1NEcb_bfOlJ"
       },
-      "execution_count": 20,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -168,9 +168,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ec7e759f-2e5d-4a6e-8e9f-9b20166d70a2"
+        "outputId": "45fe20a0-c325-43c2-a6e0-b307e5460aab"
       },
-      "execution_count": 21,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,7 +189,7 @@
       "metadata": {
         "id": "cWbT9Xpws48O"
       },
-      "execution_count": 21,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -218,7 +218,7 @@
       "metadata": {
         "id": "r8VMgqro9uaF"
       },
-      "execution_count": 21,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -289,9 +289,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x-S_Aj_5DHu7",
-        "outputId": "d37d1639-3459-4059-cd5e-4aead8630d0e"
+        "outputId": "3b2dafff-3d3a-41de-d678-b200d72682a0"
       },
-      "execution_count": 22,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +313,7 @@
       "metadata": {
         "id": "_Wby7xJILevm"
       },
-      "execution_count": 22,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -335,7 +335,7 @@
         "  R = []\n",
         "  # First, append the value of x0 to R\n",
         "  R.append(x0)\n",
-        "  # Then, take the absolute value fo the tailing term of R and append it to E\n",
+        "  # Then, take the absolute value of the tailing term of R and append it to E\n",
         "  E.append(abs(f(R[-1])))\n",
         "  # Then, the while loop should have a limit of some kind\n",
         "  lim = 10000\n",
@@ -345,7 +345,7 @@
         "  while j < lim:\n",
         "    R.append(x0 - (f(x0)/df(x0)))\n",
         "    E.append(abs(f(R[-1])))\n",
-        "    # If the final value of R isn't within the tolerence define, then update the value of x0\n",
+        "    # If the final value of R isn't within the tolerence defined, then update the value of x0\n",
         "    x0 = R[-1]\n",
         "    j += 1\n",
         "    # If the final value of E is within the tolerance defined...\n",
@@ -374,9 +374,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZRQmm-zSPGkS",
-        "outputId": "d6874617-7be1-4f24-a29f-edef5791377f"
+        "outputId": "5e8cdc3e-7787-44fd-a8ce-7fb7c86e409e"
       },
-      "execution_count": 23,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -396,7 +396,7 @@
       "metadata": {
         "id": "Kmb1HoQTR5Br"
       },
-      "execution_count": 23,
+      "execution_count": 35,
       "outputs": []
     }
   ]
