--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -6,7 +6,7 @@
       "name": "HW5.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPZtU1btiunQKnh4XyZ3DUY",
+      "authorship_tag": "ABX9TyOUfAZEKtLZvsmjiObq2rFp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": 252,
       "metadata": {
         "id": "ieBYI4DpY8YX"
       },
@@ -75,18 +75,20 @@
       "metadata": {
         "id": "t3WA-TzdkcMF"
       },
-      "execution_count": 173,
+      "execution_count": 253,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "q, r = np.linalg.qr(arr) \n",
-        "print('\\nQ:\\n', q)\n",
-        "print('\\nR:\\n', r)\n",
-        "print ('Q^T*Q = ')\n",
-        "print (np.dot(q.transpose(), q))\n",
-        "print ('Q*R =')\n",
+        "print('\\nQ: \\n', q)\n",
+        "print('\\nR: \\n', r)\n",
+        "\n",
+        "print ('\\n')\n",
+        "\n",
+        "print ('Q * R: ')\n",
+        "\n",
         "print (np.dot(q, r))"
       ],
       "metadata": {
@@ -94,29 +96,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gy2At9sNbNae",
-        "outputId": "f16bb854-9737-4e1d-dafd-859acf587d27"
+        "outputId": "f931a0d5-45a5-48ab-801e-9fb4387e1af0"
       },
-      "execution_count": 174,
+      "execution_count": 254,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Q:\n",
+            "Q: \n",
             " [[-0.18318583 -0.08610905  0.97929984]\n",
             " [-0.43964598 -0.88381371 -0.15995231]\n",
             " [ 0.87929197 -0.45984624  0.12404465]]\n",
             "\n",
-            "R:\n",
+            "R: \n",
             " [[-27.29468813 -54.77256208 106.06459346]\n",
             " [  0.         -11.22347731   4.06028083]\n",
             " [  0.           0.           4.88017756]]\n",
-            "Q^T*Q = \n",
-            "[[ 1.00000000e+00 -4.20093510e-17  1.65604632e-16]\n",
-            " [-4.20093510e-17  1.00000000e+00  7.67443371e-17]\n",
-            " [ 1.65604632e-16  7.67443371e-17  1.00000000e+00]]\n",
-            "Q*R =\n",
+            "\n",
+            "\n",
+            "Q * R: \n",
             "[[  5.  11. -15.]\n",
             " [ 12.  34. -51.]\n",
             " [-24. -43.  92.]]\n"
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "9HfcFWt3ai4P"
       },
-      "execution_count": 175,
+      "execution_count": 255,
       "outputs": []
     },
     {
@@ -166,13 +166,13 @@
       "source": [
         "\n",
         "Q, R = GrammyS(array)\n",
-        "print ('Q = ')\n",
-        "print (Q)\n",
-        "print ('R = ')\n",
-        "print (R)\n",
-        "print ('Q^T*Q = ')\n",
-        "print (np.dot(Q.transpose(), Q))\n",
-        "print ('Q*R =')\n",
+        "print('\\nQ: \\n', Q)\n",
+        "print('\\nR: \\n', R)\n",
+        "\n",
+        "print ('\\n')\n",
+        "\n",
+        "print ('Q * R =')\n",
+        "\n",
         "print (np.dot(Q, R))\n"
       ],
       "metadata": {
@@ -180,27 +180,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KQvSWCX0ayPO",
-        "outputId": "a058d081-87a9-41d2-a631-b7de366d42a3"
+        "outputId": "2c185f17-7863-4737-da0f-2dc2ec952bda"
       },
-      "execution_count": 176,
+      "execution_count": 256,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Q = \n",
-            "[[ 0.18318583  0.          1.        ]\n",
+            "\n",
+            "Q: \n",
+            " [[ 0.18318583  0.          1.        ]\n",
             " [ 0.43964598  0.87415728  0.        ]\n",
             " [-0.87929197  0.48564293  0.        ]]\n",
-            "R = \n",
-            "[[  27.29468813   54.77256208 -106.06459346]\n",
+            "\n",
+            "R: \n",
+            " [[  27.29468813   54.77256208 -106.06459346]\n",
             " [   0.           10.29563014   -3.98227204]\n",
             " [   0.            0.            4.        ]]\n",
-            "Q^T*Q = \n",
-            "[[ 1.         -0.04270219  0.18318583]\n",
-            " [-0.04270219  1.          0.        ]\n",
-            " [ 0.18318583  0.          1.        ]]\n",
-            "Q*R =\n",
+            "\n",
+            "\n",
+            "Q * R =\n",
             "[[  5.          10.03355705 -15.4295302 ]\n",
             " [ 12.          33.08053691 -50.11200456]\n",
             " [-24.         -43.16107383  91.3277827 ]]\n"
@@ -246,12 +246,12 @@
         "QR_fact(arr)\n",
         "\n",
         "Q2, R2 = QR_fact(arr)\n",
-        "print('\\nQ:\\n', Q2)\n",
-        "print('\\nR:\\n', R2)\n",
+        "print('\\nQ: \\n', Q2)\n",
+        "print('\\nR: \\n', R2)\n",
         "\n",
-        "print ('Q^T*Q = ')\n",
-        "print (np.dot(Q2.transpose(), Q2))\n",
-        "print ('Q*R =')\n",
+        "print ('\\n')\n",
+        "\n",
+        "print ('Q * R: ')\n",
         "\n",
         "print (np.dot(Q2, R2))"
       ],
@@ -260,29 +260,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HI-L3skDhMNG",
-        "outputId": "9e25a4d5-856d-49e8-a20d-d9dd202bea2c"
+        "outputId": "5cf22d38-a9e8-47b2-d65c-3910b750d158"
       },
-      "execution_count": 177,
+      "execution_count": 257,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Q:\n",
+            "Q: \n",
             " [[ 0.18318583  0.19674251  0.69774108]\n",
             " [ 0.43964598  0.6081132  -0.68822643]\n",
             " [-0.87929197 -0.76908434 -0.19875049]]\n",
             "\n",
-            "R:\n",
+            "R: \n",
             " [[  27.29468813    0.         -106.06459346]\n",
             " [   0.           55.91064299    0.        ]\n",
             " [   0.            0.            6.34838668]]\n",
-            "Q^T*Q = \n",
-            "[[ 1.00000000e+00  9.79644646e-01 -1.02436877e-15]\n",
-            " [ 9.79644646e-01  1.00000000e+00 -1.28388359e-01]\n",
-            " [-1.02436877e-15 -1.28388359e-01  1.00000000e+00]]\n",
-            "Q*R =\n",
+            "\n",
+            "\n",
+            "Q * R: \n",
             "[[  5.  11. -15.]\n",
             " [ 12.  34. -51.]\n",
             " [-24. -43.  92.]]\n"
@@ -307,7 +305,7 @@
       "metadata": {
         "id": "vwQ6z92wvLUM"
       },
-      "execution_count": 177,
+      "execution_count": 257,
       "outputs": []
     },
     {
@@ -342,11 +340,11 @@
         "print('Eigenvalue: ', l)\n",
         "print('\\nEigenvector: ', x)\n",
         "\n",
-        "print ('\\n\\nA*x =')\n",
+        "print ('\\n\\nA * x: ')\n",
         "\n",
         "print (np.dot(somearray, x))\n",
         "\n",
-        "print ('\\nλ*x =')\n",
+        "print ('\\nλ * x: ')\n",
         "\n",
         "print (np.multiply(l, x))"
       ],
@@ -355,9 +353,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pE3S64wW70Px",
-        "outputId": "fac4ac58-48cc-45f4-e756-0d26109f6cc0"
+        "outputId": "3f97b096-2122-4057-bf33-77361ddce22d"
       },
-      "execution_count": 178,
+      "execution_count": 258,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,12 +368,12 @@
             " [-0.8186735   0.61232756  0.40824829]]\n",
             "\n",
             "\n",
-            "A*x =\n",
+            "A * x: \n",
             "[[-3.73863537e+00  8.77649763e-01 -3.88578059e-16]\n",
             " [-8.46653421e+00  9.68877101e-02 -7.77156117e-16]\n",
             " [-1.31944331e+01 -6.83874343e-01 -7.21644966e-16]]\n",
             "\n",
-            "λ*x =\n",
+            "λ * x: \n",
             "[[-3.73863537e+00  8.77649763e-01 -3.98417052e-16]\n",
             " [-8.46653421e+00  9.68877101e-02  7.96834105e-16]\n",
             " [-1.31944331e+01 -6.83874343e-01 -3.98417052e-16]]\n"
@@ -400,7 +398,7 @@
       "metadata": {
         "id": "8FoNAVEN84Sr"
       },
-      "execution_count": 178,
+      "execution_count": 258,
       "outputs": []
     }
   ]
