--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -6,7 +6,7 @@
       "name": "HW5.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNxBx7gYzXMJ26e9jKiVxWh",
+      "authorship_tag": "ABX9TyOvbQ3v+BnqtRJBfG+bI2CZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 270,
+      "execution_count": null,
       "metadata": {
         "id": "ieBYI4DpY8YX"
       },
@@ -77,7 +77,7 @@
       "metadata": {
         "id": "t3WA-TzdkcMF"
       },
-      "execution_count": 271,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -100,7 +100,7 @@
         "id": "Gy2At9sNbNae",
         "outputId": "cc290020-f8c3-41b6-b49f-20e42c4fd8d2"
       },
-      "execution_count": 272,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
       "metadata": {
         "id": "9HfcFWt3ai4P"
       },
-      "execution_count": 273,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -171,7 +171,7 @@
         "\n",
         "print ('\\n')\n",
         "\n",
-        "print ('Q * R =')\n",
+        "print ('Q * R: ')\n",
         "\n",
         "print (np.dot(Q, R))\n"
       ],
@@ -182,7 +182,7 @@
         "id": "KQvSWCX0ayPO",
         "outputId": "29be42bc-e574-4e45-ce40-56c822491f7b"
       },
-      "execution_count": 274,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
         "id": "HI-L3skDhMNG",
         "outputId": "f6ecef3d-df62-4f24-8491-35207af5d491"
       },
-      "execution_count": 275,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +305,7 @@
       "metadata": {
         "id": "vwQ6z92wvLUM"
       },
-      "execution_count": 275,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -355,7 +355,7 @@
         "id": "pE3S64wW70Px",
         "outputId": "685449b3-5965-4944-f00a-88f9c9049e56"
       },
-      "execution_count": 276,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -398,7 +398,7 @@
       "metadata": {
         "id": "8FoNAVEN84Sr"
       },
-      "execution_count": 276,
+      "execution_count": null,
       "outputs": []
     }
   ]
